; ModuleID = '/home/carl/AnghaBench/openwrt/package/boot/rbcfg/src/extr_main.c_rbcfg_cmd_set.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/boot/rbcfg/src/extr_main.c_rbcfg_cmd_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rbcfg_env = type { i32 }

@RB_ERR_INVALID = common dso_local global i32 0, align 4
@rbcfg_envs = common dso_local global %struct.rbcfg_env* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @rbcfg_cmd_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rbcfg_cmd_set(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.rbcfg_env*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %9 = load i32, i32* @RB_ERR_INVALID, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 2
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = call i32 (...) @usage()
  %14 = load i32, i32* @RB_ERR_INVALID, align 4
  store i32 %14, i32* %3, align 4
  br label %51

15:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %16

16:                                               ; preds = %46, %15
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.rbcfg_env*, %struct.rbcfg_env** @rbcfg_envs, align 8
  %19 = call i32 @ARRAY_SIZE(%struct.rbcfg_env* %18)
  %20 = icmp slt i32 %17, %19
  br i1 %20, label %21, label %49

21:                                               ; preds = %16
  %22 = load %struct.rbcfg_env*, %struct.rbcfg_env** @rbcfg_envs, align 8
  %23 = load i32, i32* %7, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.rbcfg_env, %struct.rbcfg_env* %22, i64 %24
  store %struct.rbcfg_env* %25, %struct.rbcfg_env** %8, align 8
  %26 = load %struct.rbcfg_env*, %struct.rbcfg_env** %8, align 8
  %27 = getelementptr inbounds %struct.rbcfg_env, %struct.rbcfg_env* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i8**, i8*** %5, align 8
  %30 = getelementptr inbounds i8*, i8** %29, i64 0
  %31 = load i8*, i8** %30, align 8
  %32 = call i64 @strcmp(i32 %28, i8* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %21
  br label %46

35:                                               ; preds = %21
  %36 = load %struct.rbcfg_env*, %struct.rbcfg_env** %8, align 8
  %37 = load i8**, i8*** %5, align 8
  %38 = getelementptr inbounds i8*, i8** %37, i64 1
  %39 = load i8*, i8** %38, align 8
  %40 = call i32 @rbcfg_env_set(%struct.rbcfg_env* %36, i8* %39)
  store i32 %40, i32* %6, align 4
  %41 = load i32, i32* %6, align 4
  %42 = icmp eq i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %35
  %44 = call i32 @rbcfg_update(i32 1)
  store i32 %44, i32* %6, align 4
  br label %45

45:                                               ; preds = %43, %35
  br label %49

46:                                               ; preds = %34
  %47 = load i32, i32* %7, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %7, align 4
  br label %16

49:                                               ; preds = %45, %16
  %50 = load i32, i32* %6, align 4
  store i32 %50, i32* %3, align 4
  br label %51

51:                                               ; preds = %49, %12
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

declare dso_local i32 @usage(...) #1

declare dso_local i32 @ARRAY_SIZE(%struct.rbcfg_env*) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @rbcfg_env_set(%struct.rbcfg_env*, i8*) #1

declare dso_local i32 @rbcfg_update(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
